syntax = "proto3";

option go_package = "./;manager";

message ResponseStatus {
    int32 code = 1;
    string message = 2;
}

service TiCPManagerService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc VerifyIdentity(VerifyIdentityRequest) returns (VerifyIdentityResponse);
}

message LoginRequest {
    string accountName = 1;
    string password = 2;
}

message LoginResponse {
    ResponseStatus status = 1;
    string tokenString = 2;
}

message LogoutRequest {
    string tokenString = 1;
}

message LogoutResponse {
    ResponseStatus status = 1;
    string accountName = 2;
}

message VerifyIdentityRequest {
    string tokenString = 1;
    string path = 2;
    string authType = 3;
}

message VerifyIdentityResponse {
    ResponseStatus status = 1;
    string msg = 2;
    string accountName = 3;
    int32 tenantId = 4;
}