syntax = "proto3";

option go_package = "./;db";

message ClusterResponseStatus {
    int32 code = 1;
    string message = 2;
}

message ClusterDTO {
    int32 id = 1;
    string name = 2;
    int32 tenantId = 3;
    string dbPassword = 4;
    string version = 5;
    int32 status = 6;
    int32 tidbCount = 7;
    int32 tikvCount = 8;
    int32 pdCount = 9;
}

message TiUPConfigDTO {
    int32 id = 1;
    int32 tenantId = 2;
    int32 clusterId = 3;
    bool latest = 4;
    string content = 5;
}

message CreateClusterRequest {
    ClusterDTO cluster = 1;
}
message CreateClusterResponse {
    ClusterResponseStatus status = 1;
    ClusterDTO cluster = 2;
}

message FindClusterRequest {
    int32 clusterId = 1;
}

message FindClusterResponse {
    ClusterResponseStatus status = 1;
    ClusterDTO cluster = 2;
    TiUPConfigDTO config = 3;
}

message UpdateTiUPConfigRequest {
    int32 clusterId = 1;
    string configContent = 2;
}

message UpdateTiUPConfigResponse {
    ClusterResponseStatus status = 1;
    ClusterDTO cluster = 2;
    TiUPConfigDTO config = 3;
}